--- a/RealTimeSimulator.html
+++ b/RealTimeSimulator.html
@@ -2569,7 +2569,6 @@ void main(void) {
       }
 
       function clear_all() {
-        window.distribution_locked = false;
         window.last_distribution = null;
 
         window.last_wealth_trapezoids = [
@@ -2794,9 +2793,10 @@ void main(void) {
               return v.name != event.name
             })
             window.distribution_events.push({type:"userExitsGroupEvent", data:{name:event.name}})
+            window.pledgers = window.pledgers.filter((user)=>user.name != event.name)
+            window.receivers = window.receivers.filter((user)=>user.name != event.name)
           } else if (event.type == EVENT_TYPES.PAYMENT) {
             window.distribution_events.push({type:"paymentEvent", data:{from:event.from, to:event.to, amount:event.amount}})
-            window.distribution_locked = true;
             var pledger = get_pledger_or_receiver(event.from);
             var receiver = get_pledger_or_receiver(event.to);
 
@@ -2849,7 +2849,6 @@ void main(void) {
           } else if (event.type == EVENT_TYPES.MONTHLY_BALANCE) {
             window.last_distribution = null;
             window.distribution_events = []
-            window.distribution_locked = false;
             window.pledgers = JSON.parse(JSON.stringify(event.pledgers)).map((v) => {
               v.time_variable = event.when;
               v.vertical_height = 0;
@@ -2895,11 +2894,6 @@ void main(void) {
           // window.receivers[i].income_integral = window.receivers[i].last_income
           money_heights.push([window.receivers[i].time_variable, window.receivers[i].last_income])
           window.receivers[i].money_heights = money_heights
-        }
-        if (window.distribution_locked) {
-          document.getElementById("lock_message").style.display = 'inline-block'
-        } else {
-          document.getElementById("lock_message").style.display = 'none'
         }
       }
 
@@ -3293,7 +3287,6 @@ void main(void) {
       }
       window.minimize = true;
       window.toggle_minimize = () => {
-        if (window.distribution_locked) return;
         var button = document.getElementById("minimize");
         var onOff = button.innerHTML == "Minimize";
         window.minimize = onOff;
@@ -3314,9 +3307,6 @@ void main(void) {
         <br>
         <br>
         <button id="minimize" style="display:inline-block;" onclick="window.toggle_minimize()">Unminimize</button>
-        <br>
-        <label id="lock_message" style="border:none; background-color: rgba(0,0,0,0) !important; color: #f70!important; display:inline-block;">Distribution
-          Locked</Label>
       </div>
       <div id="add_receiver" style="position:absolute; left:66%; top:10px; width: 33%; height:95%; text-align:center;">
         <button onclick="add_receiver()">Add Receiver</button>
