Instructions now show after clicking "Reset".

--- a/Simulator.html
+++ b/Simulator.html
@@ -2282,6 +2282,7 @@ void main(void) {
       }
 
       function clear_all() {
+        document.getElementById("load_message").style.display = "block"
         window.distribution_locked = false;
         window.last_distribution = null;
 
